##### Version 1.4.1
Date: 06 December 2024

Changes:
--------
- Corrected labelling of factor effect levels.

##### Version 1.4.0
Date: 07 October 2024

Changes:
--------
- Updated "contr.weighted" to correctly handle interactions.
- Added hasseMod to extrac Hasse diagram from mixed models.

##### Version 1.3.0
Date: 08 August 2023

Changes:
--------
- Removed contr.sum override on package startup.
- Added single character contrasts to lm() with "contr.sum" as default.
- Added possibility of weighted contrasts by "contr.weighted" using above argument.
- Add SStype to Anova to choose between type I, II and III.

##### Version 1.2.6
================
Date: 04 February 2022

Bug fixes:
----------
- Fixed error in backward, forward, stepwise models when using . in formula.

##### Version 1.2.5
================
Date: 26 April 2021

Bug fixes:
----------
- Fixed error in two-proportion test without standard deviation pooling.

##### Version 1.2.4
================
Date: 13 December 2019

Bug fixes:
----------
- Fixed wrong use of class inheritance check.
- Fixed wrong use of array recycling.

##### Version 1.1.0
================
Date: 13 November 2015

Changes:
--------
- Sets contrasts to contr.sum (sum-to-zero) on startup with a message.
- Changed simple.glht to handle Tukey's HSD for fixed effect models the same way as for mixed models.
- Changed the cld to allways have the first letter in the beginning of the column regardless of decreasing = TRUE/FALSE.
- Added studentized range for 1 df in quantile function for improved simple.glht output.
- Graceful error when 1 df encountered for cld.
- Moved packages from depends to imports.

Bug fixes:
----------
- Corrected Anova which always defaulted to type="II", claiming to type="III".