@@ -1,8 +1,8 @@
 Package: mixlm
 Type: Package
 Title: Mixed Model ANOVA and Statistics for Education
-Version: 1.4.0
-Date: 2024-10-07
+Version: 1.4.1
+Date: 2024-12-30
 Authors@R: c(person("Kristian Hovde", "Liland", role = c("aut","cre"), email="kristian.liland@nmbu.no"),
  person("Solve", "Sæbø¸", role=c("ctb")), person(family="R-Core", role="ctb"))
 Maintainer: Kristian Hovde Liland <kristian.liland@nmbu.no>
